# gixpy

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build.bat  compile-paper.sh  gixpy.sln  paper.md  pyproject.toml  run_this.txt  setup.py
.github/workflows/: draft-pdf.yml
examples/: transform-GIWAXS.ipynb  transform-ones.ipynb  visualize.py
gixpy/: README.md  __init__.py  gixpy.c  gixpy.py  gixpy.vcxproj  gixpy.vcxproj.filters  poni.py  programs.py  pyproject.toml  setup.py  test.py  transform.c
gixpy/gixpy/: gixpy.py  transform.c
gixpy/gixpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gixpy/gixpy_etortorici.egg-info/: PKG-INFO  SOURCES.txt
images/tikz/: ewald-sphere.tex  scattering-angles.tex  waxs.tex
paper/: paper copy.md  paper.bib  paper.md
paper/images/tikz/: convert_pdf.py  detector-origin.tex  detector-transform.fdb_latexmk  detector-transform.fls  detector-transform.tex  experimental-geometry.tex  pixel-poni.tex  pixel-split.tex  scattering-angles.fdb_latexmk  scattering-angles.fls  scattering-angles.tex  scattering-detector.tex  tilt.tex
paper/jats/: paper.jats
source/: __init__.py  gixpy.py
tests/: transform-test-data.py
x64/Debug/: gixpy.exp
x64/Release/: gixpy.exp  gixpy.lib
