[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "gixpy"
version = "1.6"
authors = [
  { name="Teddy Tortorici", email="edward.tortorici@colorado.edu" },
]
description = "Transform GIWAXS images"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file=["README.md"]}

[project.urls]
Homepage = "https://github.com/etortorici/gixpyy"
Issues = "https://github.com/etortorici/gixpyy/issues"