[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "gixpy"
version = "2.0"
authors = [
  { name="Teddy Tortorici", email="edward.tortorici@colorado.edu" },
]
description = "Transform GIWAXS images"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file=["README.md"]}

[project.urls]
Homepage = "https://github.com/ttortorici/gixpy"
Issues = "https://github.com/ttortorici/gixpy/issues"