[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "gixpy"
version = "5.6"
authors = [
  { name="Teddy Tortorici", email="edward.tortorici@colorado.edu" },
]
description = "Transform GIWAXS images"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "pyFAI", "fabio"]
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file=["README.md"]}

[project.urls]
Homepage = "https://github.com/ttortorici/gixpy"
Issues = "https://github.com/ttortorici/gixpy/issues"
